// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components | <ContentSection /> with custom class should render correctly 1`] = `
<DocumentFragment>
  <section
    class="content-section testclass"
  >
    <img
      class="content-section__icon"
    />
    <h1>
      Hello World
    </h1>
    <div
      class="content-section__spacer"
    />
  </section>
</DocumentFragment>
`;

exports[`Components | <ContentSection /> with no class should render correctly 1`] = `
<DocumentFragment>
  <section
    class="content-section"
  >
    <img
      class="content-section__icon"
    />
    <h1>
      Hello World
    </h1>
    <div
      class="content-section__spacer"
    />
  </section>
</DocumentFragment>
`;
